Fix func displaySearchResults

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <div id="main-content">
         <h3 id="chart-title">ChartChart</h3>
         <div class="search-container">
-            <input type="text" id="search-bar" class="search-input" placeholder="Search trackName or artist...">
+            <input type="text" id="search-bar" class="search-input" placeholder="Search track name or artist name...">
             <button class="search-button">Search</button>
         </div>
         <div id="search-results-popup" class="search-results-popup"></div>
