fix track return value

--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <div id="main-content">
-        <h3 id="chart-title">ChartChart</h3>
+        <h3 id="chart-title">chartCHART</h3>
         <div class="search-container">
-            <input type="text" id="search-bar" class="search-input" placeholder="Search track name or artist name...">
+            <input type="text" id="search-bar" class="search-input" placeholder="Search track name or artist name..."
+                autocomplete="off">
             <button class="search-button">Search</button>
         </div>
         <div id="search-results-popup" class="search-results-popup"></div>
